DNA, Title Localization and Regiments

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -2319,3 +2319,193 @@
  c_darukan:0 "Darukan"
  b_darukan:0 "Darukan"
  b_chelmeh:0 "Chelmeh"
+ 
+ k_duscur:0 "Duscur"
+ d_kleiman:0 "Kleiman"
+ c_imperia:0 "Imperia"
+ b_imperia:0 "Imperia"
+ b_remo:0 "Remo"
+ b_alassio:0 "Alassio"
+ b_loano:0 "Loano"
+
+ c_senatore:0 "Senatore"
+ b_senatore:0 "Senatore"
+ b_magalo:0 "Magalo"
+ b_lalibela:0 "Lalibela"
+
+ c_pretoria:0 "Pretoria"
+ b_pretoria:0 "Pretoria"
+ b_moggio:0 "Moggio"
+ b_coluto:0 "Coluto"
+
+ c_magistras:0 "Magistras"
+ b_magistras:0 "Magistras"
+ b_aggaro:0 "Aggaro"
+ b_miesso:0 "Miesso"
+
+ d_norfer:0 "Norfer"
+ c_norfer:0 "Norfer"
+ b_norfer:0 "Norfer"
+ b_alexria:0 "Alexria"
+ b_tibeh:0 "Tibeh"
+
+ c_pavia:0 "Pavia"
+ b_pavia:0 "Pavia"
+ b_chios:0 "Chios"
+
+ k_sreng:0 "Sreng"
+ d_nydalr:0 "Nydalr"
+ c_dyfgard:0 "Dyfgard"
+ b_dyfgard:0 "Dyfgard"
+ b_hofenthorp:0 "Hofenthorp"
+ b_kamburberg:0 "Kamburberg"
+ b_gufurtindur:0 "Gufurtindur"
+
+ c_dzaminn:0 "Dzaminn"
+ b_dzaminn:0 "Dzaminn"
+ b_laekursteinn:0 "Laekursteinn"
+ b_engeltjorn:0 "Engeltjorn"
+
+ c_kvennathorp:0 "Kvennathorp"
+ b_kvennathorp:0 "Kvennathorp"
+ b_miklaberg:0 "Miklaberg"
+ b_skergangur:0 "Skergangur"
+
+ d_bygdalr:0 "Bygdalr"
+ c_brubygdvik:0 "Brubygdvik"
+ b_brubygdvik:0 "Brubygdvik"
+ b_eyrdenjar:0 "Eyrdenjar"
+ b_mulituin:0 "Mulituin"
+ b_bjagenthorp:0 "Bjagenthorp"
+
+ c_sandendalr:0 "Sandendalr"
+ b_sandendalr:0 "Sandendalr"
+ b_gunnarsdal:0 "Gunnarsdal"
+ b_grimvollr:0 "Grimvollr"
+
+ c_dragakot:0 "Dragakot"
+ b_dragakot:0 "Dragakot"
+ b_horsokn:0 "Horsokn"
+ b_delgurholmr:0 "Delgurholmr"
+
+ d_hellig_orken:0 "Hellig Orken"
+ c_vindkaller:0 "Vindkaller"
+ b_vindkaller:0 "Vindkaller"
+ b_gjahara:0 "Gjahara"
+ b_khadkelda:0 "Khadkelda"
+ b_ondorsvegur:0 "Ondorsvegur"
+ b_gorivellir:0 "Gorivellir"
+
+ c_orkenlegende:0 "Orkenlegende"
+ b_orkenlegende:0 "Orkenlegende"
+ b_delsangr:0 "Delsangr"
+ b_ivarhaugr:0 "Ivarhaugr"
+
+ c_magikeren:0 "Magikeren"
+ b_magikeren:0 "Magikeren"
+ b_serkgangr:0 "Serkgangr"
+ b_djupsgigur:0 "Djupsgigur"
+
+ d_innraborg:0 "Innraborg"
+ c_bjarskagi:0 "Bjarskagi"
+ b_bjarskagi:0 "Bjarskagi"
+ b_iderhofn:0 "Iderhofn"
+ b_vipmansthorp:0 "Vipmansthorp"
+ b_dragaskardr:0 "Dragaskardr"
+
+ c_yttrihalendi:0 "Yttrihalendi"
+ b_yttrihalendi:0 "Yttrihalendi"
+ b_choyoroddi:0 "Choyoroddi"
+
+ c_hauger:0 "Hauger"
+ b_hauger:0 "Hauger"
+ b_bajdariki:0 "Bajdariki"
+ 
+ d_jordenbrann:0 "Jordenbrann"
+ c_erobring:0 "Erobring"
+ b_erobring:0 "Erobring"
+ b_uneenoldur:0 "Uneenoldur"
+ b_khuytengangr:0 "Khuytengangr"
+ b_bayanholt:0 "Bayanholt"
+ b_sagahryggur:0 "Sagahryggur"
+
+ c_vegursboten:0 "Vegursboten"
+ b_vegursboten:0 "Vegursboten"
+ b_sangdalr:0 "Sangdalr"
+ b_dolonjokull:0 "Dolonjokull"
+
+ c_akrarkleif:0 "Akrarkleif"
+ b_akrarkleif:0 "Akrarkleif"
+ b_khoboringr:0 "Khoboringr"
+ b_borihafn:0 "Borihafn"
+
+ c_drangja:0 "Drangja"
+ b_drangja:0 "Drangja"
+ b_skogurkirkja:0 "Skogurkirkja"
+ b_kirkjenstein:0 "Kirkjenstein"
+
+ c_aldakot:0 "Aldakot"
+ b_aldakot:0 "Aldakot"
+ b_bayandalr:0 "Bayandalr"
+ b_khanbrefabok:0 "Khanbrefabok"
+
+ k_nuada:0 "Nuada"
+ d_argovia:0 "Argovia"
+ c_friboro:0 "Friboro"
+ b_friboro:0 "Friboro"
+ b_laone:0 "Laone"
+ b_cervino:0 "Cervino"
+ b_novena:0 "Novena"
+
+ c_tavate:0 "Tavate"
+ b_tavate:0 "Tavate"
+ b_palu:0 "Palu"
+
+ c_ginevra:0 "Ginevra"
+ b_ginevra:0 "Ginevra"
+ b_roncaglia:0 "Roncaglia"
+
+ c_losanna:0 "Losanna"
+ b_losanna:0 "Losanna"
+ b_scanevo:0 "Scanevo"
+
+ d_madulain:0 "Madulain"
+ c_maloggia:0 "Maloggia"
+ b_maloggia:0 "Maloggia"
+ b_prettigovia:0 "Prettigovia"
+ b_sciafussa:0 "Sciafussa"
+ 
+ c_nufena:0 "Nufena"
+ b_nufena:0 "Nufena"
+ b_soletta:0 "Soletta"
+
+ c_spliga:0 "Spliga"
+ b_spliga:0 "Spliga"
+ b_tosanna:0 "Tosanna"
+
+ d_turgovia:0 "Turgovia"
+ c_engadina:0 "Engadina"
+ b_engadina:0 "Engadina"
+ b_vallese:0 "Vallese"
+ b_cerpezzo:0 "Cerpezzo"
+
+ c_glarona:0 "Glarona"
+ b_glarona:0 "Glarona"
+ b_appenzello:0 "Appenzello"
+ b_vasilea:0 "Vasilea"
+ 
+ c_casinotta:0 "Casinotta"
+ b_casinotta:0 "Casinotta"
+ b_berna:0 "Berna"
+
+ d_asburgo:0 "Asburgo"
+ c_giura:0 "Giura"
+ b_giura:0 "Giura"
+ b_bavero:0 "Bavero"
+
+ c_campovasto:0 "Campovasto"
+ b_campovasto:0 "Campovasto"
+ b_bienna:0 "Bienna"
+
+ c_atlam:0 "Atlam"
+ b_atlam:0 "Atlam"
