traits, culture, and char changes

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -2938,3 +2938,80 @@
  b_rahimah:0 "Rahimah"
  b_markaz:0 "Markaz"
  b_mekkilah:0 "Mekkilah"
+ 
+ k_ineveh:0 "Ineveh"
+ d_centzon:0 "Centzon"
+ c_inabad:0 "Inabad"
+ b_inabad:0 "Inabad"
+ b_al_miraj:0 "Al Miraj"
+ b_skavabad:0 "Skavabad"
+ b_saidkorghon:0 "Saidkorghon"
+ 
+ c_jiibayad:0 "Jiibayad"
+ b_jiibayad:0 "Jiibayad"
+ b_ogbulog:0 "Ogbulog"
+ b_lengeh:0 "Lengeh"
+
+ c_kaltek:0 "Kaltek"
+ b_kaltek:0 "Kaltek"
+ b_lagman:0 "Lagman"
+ b_chabulak:0 "Chabulak"
+
+ c_lupusad:0 "Lupusad"
+ b_lupusad:0 "Lupusad"
+ b_boshbulok:0 "Boshbulok"
+ b_obinukra:0 "Obinukra"
+ 
+ d_yuqori:0 "Yuqori"
+ c_shululu:0 "Shululu"
+ b_shululu:0 "Shululu"
+ b_toshat:0 "Toshat"
+ b_qaratosh:0 "Qaratosh"
+
+ c_bulakizal:0 "Bulakizal"
+ b_bulakizal:0 "Bulakizal"
+ b_shurob:0 "Shurob"
+
+ d_mogol:0 "Mogol"
+ c_yel:0 "Yel"
+ b_yel:0 "Yel"
+ b_medenshor:0 "Medenshor"
+ b_khostho:0 "Khostho"
+ b_balagdash:0 "Balagdash"
+
+ c_abdan:0 "Abdan"
+ b_abdan:0 "Abdan"
+ b_hariyuli:0 "Hariyuli"
+ b_kurkat:0 "Kurkat"
+ 
+ c_luchob:0 "Luchob"
+ b_luchob:0 "Luchob"
+ b_mekhnatabod:0 "Mekhnatabod"
+ b_qalohna:0 "Qalohna"
+
+ c_saksanokhur:0 "Saksanokhur"
+ b_saksanokhur:0 "Saksanokhur"
+ b_radavik:0 "Radavik"
+ b_khulozy:0 "Khulozy"
+
+ d_shabuka:0 "Shabuka"
+ c_bashkomaz:0 "Bashkomaz"
+ b_bashkomaz:0 "Bashkomaz"
+ b_zosun:0 "Zosun"
+ b_settilmirish:0 "Settilmirish"
+ b_vopazur:0 "Vopazur"
+ 
+ c_tovabulok:0 "Tovabulok"
+ b_tovabulok:0 "Tovabulok"
+ b_foru:0 "Foru"
+ b_zorchal:0 "Zorchal"
+
+ c_guyundar:0 "Guyundar"
+ b_guyundar:0 "Guyundar"
+ b_qataghan:0 "Qataghan"
+ b_vagel:0 "Vagel"
+
+ c_vozm:0 "Vozm"
+ b_vozm:0 "Vozm"
+ b_puligirdob:0 "Puligirdob"
+ b_surkhashma:0 "Surkhashma" 
