--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -298,8 +298,8 @@
  b_ulverston:0 "Ulverston"
  b_dulverton:0 "Dulverton"
   
- c_tamworth:0 "Tamworth"
- b_tamworth:0 "Tamworth"
+ c_tamsworth:0 "Tamworth"
+ b_tamsworth:0 "Tamworth"
  b_leece:0 "Leece"
  b_caliban:0 "Caliban"
 
