welded back together (leicester and faerghus)

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -425,8 +425,8 @@
  b_marigane:0 "Marigane"
  b_aix:0 "Aix"
 
- c_aurigniy:0 "Aurigniy"
- b_aurigniy:0 "Aurigniy"
+ c_aurigny:0 "Aurigny"
+ b_aurigny:0 "Aurigny"
  b_villau:0 "Villau"
  b_cherble:0 "Cherble"
 
