Province detailing Leicester finished

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -2944,6 +2944,43 @@
  b_markaz:0 "Markaz"
  b_mekkilah:0 "Mekkilah"
  
+ d_sayysum:0 "Sayysum"
+ c_sayyirah:0 "Sayyirah"
+ b_sayyirah:0 "Sayyirah"
+ b_moykatta:0 "Moykatta"
+ b_amring:0 "Amring"
+
+ c_buqay:0 "Buqay"
+ b_buqay:0 "Buqay"
+ b_terem:0 "Terem"
+ b_omada:0 "Omada"
+
+ c_sharikhiyah:0 "Sharikhiyah"
+ b_sharikhiyah:0 "Sharikhiyah"
+ b_gushirtov:0 "Gushirtov"
+ b_karakchi:0 "Karakchi"
+
+ c_gajjiya:0 "Gajjiya"
+ b_gajjiya:0 "Gajjiya"
+ b_khalfa:0 "Khalfa"
+ b_vogat:0 "Vogat"
+
+ d_annimriya:0 "Annimriya"
+ c_mayza:0 "Mayza"
+ b_mayza:0 "Mayza"
+ b_paskitomchi:0 "Paskitomchi"
+ b_pisokat:0 "Pisokat"
+
+ c_daylamiyah:0 "Daylamiyah"
+ b_daylamiyah:0 "Daylamiyah"
+ b_chugarak:0 "Chugarak"
+ b_karagach:0 "Karagach"
+
+ c_amiyah:0 "Amiyah"
+ b_amiyah:0 "Amiyah"
+ b_gougavd:0 "Gougavd"
+ b_seidzh:0 "Seidzh" 
+ 
  k_ineveh:0 "Ineveh"
  d_centzon:0 "Centzon"
  c_inabad:0 "Inabad"
@@ -3020,3 +3057,331 @@
  b_vozm:0 "Vozm"
  b_puligirdob:0 "Puligirdob"
  b_surkhashma:0 "Surkhashma" 
+ 
+ e_koteshger:0 "Koteshger"
+ k_ikhtal:0 "Ikhtal"
+ d_dalayid:0 "Dalayid"
+ c_tszun:0 "Tszun"
+ b_tszun:0 "Tszun"
+ b_sundzen:0 "Sundzen"
+ b_hebteme:0 "Hebteme"
+ b_sayntsagaan:0 "Sayntsagaan"
+
+ c_seeriin:0 "Seeriin"
+ b_seeriin:0 "Seeriin"
+ b_mingat:0 "Mingat"
+ b_dalthid:0 "Dalthid"
+
+ c_doynhor:0 "Doynhor"
+ b_doynhor:0 "Doynhor"
+ b_dalan:0 "Dalan"
+ b_zamunide:0 "Zamunide"
+
+ c_khoshu:0 "Khoshu"
+ b_khoshu:0 "Khoshu"
+ b_santuma:0 "Santuma"
+ b_kharaganain:0 "Kharaganain"
+
+ c_arigynn:0 "Arigynn"
+ b_arigynn:0 "Arigynn"
+ b_khotohure:0 "Khotohure"
+ b_baykid:0 "Baykid"
+
+ d_demcgiid:0 "Demcgiid"
+ c_luma:0 "Luma"
+ b_luma:0 "Luma"
+ b_byanural:0 "Byanural"
+ b_dzohod:0 "Dzohod"
+
+ c_nariin:0 "Nariin"
+ b_nariin:0 "Nariin"
+ b_usatanaii:0 "Usatanaii"
+
+ c_burgaasa:0 "Burgaasa"
+ b_burgaasa:0 "Burgaasa"
+ b_nalaikha:0 "Nalaikha"
+
+ c_palan:0 "Palan"
+ b_palan:0 "Palan"
+ b_undents:0 "Undents"
+
+ d_ugtumynn:0 "Ugtumynn"
+ c_balji:0 "Balji"
+ b_balji:0 "Balji"
+ b_darahin:0 "Darahin"
+ b_sulobotuin:0 "Sulobotuin"
+ b_uragyyn:0 "Uragyyn"
+
+ c_bandi:0 "Bandi"
+ b_bandi:0 "Bandi"
+ b_buyantu:0 "Buyantu"
+ b_duguhantyryn:0 "Duguhantyryn"
+
+ c_buyantayn:0 "Buyantayn"
+ b_buyantayn:0 "Buyantayn"
+ b_khayutu:0 "Khayutu"
+ b_abagayn:0 "Abagayn"
+
+ c_mogoyn:0 "Mogoyn"
+ b_mogoyn:0 "Mogoyn"
+ b_doloni:0 "Doloni"
+ b_darhantayee:0 "Darhantayee"
+
+ d_baraguyn:0 "Baraguyn"
+ c_tsagan:0 "Tsagan"
+ b_tsagan:0 "Tsagan"
+ b_naranak:0 "Naranak"
+ b_bayagaziid:0 "Bayagaziid"
+
+ c_borgosi:0 "Borgosi"
+ b_borgosi:0 "Borgosi"
+ b_tukuma:0 "Tukuma"
+ b_hoboriin:0 "Hoboriin"
+
+ c_khartszatuin:0 "Khartszatuin"
+ b_khartszatuin:0 "Khartszatuin"
+ b_tabumodan:0 "Tabumodan"
+ b_uburtyyn:0 "Uburtyyn"
+
+ c_lisain:0 "Lisain"
+ b_lisain:0 "Lisain"
+ b_baruuye:0 "Baruuye"
+ b_luchzhen:0 "Luchzhen"
+
+ d_urton:0 "Urton"
+ c_galharyin:0 "Galharyin"
+ b_galharyin:0 "Galharyin"
+ b_harutyr:0 "Harutyr"
+ b_dayakhid:0 "Dayakhid"
+
+ c_engershand:0 "Engershand"
+ b_engershand:0 "Engershand"
+ b_khodogui:0 "Khodogui"
+ b_underroyn:0 "Underroyn"
+
+ c_khotogtuew:0 "Khotogtuew"
+ b_khotogtuew:0 "Khotogtuew"
+ b_daltihid:0 "Daltihid"
+
+ c_sharaiin:0 "Sharaiin"
+ b_sharaiin:0 "Sharaiin"
+ b_somonighur:0 "Somonighur"
+ b_ulabaa:0 "Ulabaa"
+
+ d_megulryba:0 "Megulryba"
+ c_sumain:0 "Sumain"
+ b_sumain:0 "Sumain"
+ b_dugete:0 "Dugete"
+ b_habtsagay:0 "Habtsagay"
+
+ c_khongor:0 "Khongor"
+ b_khongor:0 "Khongor"
+ b_tsekherin:0 "Tsekherin"
+ b_khadayn:0 "Khadayn"
+
+ c_dalkhain:0 "Dalkhain"
+ b_dalkhain:0 "Dalkhain"
+ b_amogolambu:0 "Amogolambu"
+ b_uburayn:0 "Uburayn"
+
+ c_haranaiin:0 "Haranaiin"
+ b_haranaiin:0 "Haranaiin"
+ b_bulagan:0 "Bulagan"
+ b_zanjigin:0 "Zanjigin"
+
+ k_dantagar:0 "Dantagar"
+ d_ratna:0 "Ratna"
+ c_suvd:0 "Suvd"
+ b_suvd:0 "Suvd"
+ b_saraspur:0 "Saraspur"
+ b_manduk:0 "Manduk"
+ b_kushtia:0 "Kushtia"
+ b_kulikundar:0 "Kulikundar"
+ b_parkot:0 "Parkot"
+
+ c_bari:0 "Bari"
+ b_bari:0 "Bari"
+ b_kharda:0 "Kharda"
+ b_shashidharpur:0 "Shashidharpur"
+ b_maijha:0 "Maijha"
+ b_banstola:0 "Banstola"
+
+ c_sylgyzbandar:0 "Sylgyzbandar"
+ b_sylgyzbandar:0 "Sylgyzbandar"
+ b_jhoppara:0 "Jhoppara"
+ b_khalisadah:0 "Khalisadah"
+ b_nischinta:0 "Nischinta"
+
+ c_batubad:0 "Batubad"
+ b_batubad:0 "Batubad"
+ b_jugirtabak:0 "Jugirtabak"
+ b_sahadar:0 "Sahadar"
+
+ d_temdi:0 "Temdi"
+ c_baratuli:0 "Baratuli"
+ b_baratuli:0 "Baratuli"
+ b_bhagjoar:0 "Bhagjoar"
+ b_chandanpat:0 "Chandanpat"
+
+ c_fakirkil:0 "Fakirkil"
+ b_fakirkil:0 "Fakirkil"
+ b_saranjagari:0 "Saranjagari"
+ b_jamak:0 "Jamak"
+
+ c_lashkarpur:0 "Lashkarpur"
+ b_lashkarpur:0 "Lashparpur"
+ b_kholahati:0 "Kholahati"
+ b_bhabermura:0 "Bhabermura"
+
+ d_kharinchara:0 "Kharinchara"
+ c_gezutia:0 "Gezutia"
+ b_gezutia:0 "Gezutia"
+ b_hatirdia:0 "Hatirdia"
+ b_dibazkul:0 "Dibazkul"
+
+ c_ghala:0 "Ghala"
+ b_ghala:0 "Ghala"
+ b_dafilaz:0 "Dafilaz"
+ b_samarsing:0 "Samarsing"
+
+ c_kastor:0 "Kastor"
+ b_kastor:0 "Kastor"
+ b_urtbuzia:0 "Urtbuzia"
+ b_tailapara:0 "Tailapara"
+
+ d_didotokan:0 "Didotokan"
+ c_surbafuldi:0 "Surbafuldi"
+ b_surbafuldi:0 "Surbafuldi"
+ b_ghosalerdara:0 "Ghosalerdara"
+ b_nimtali:0 "Nimtali"
+
+ c_baharal:0 "Baharal"
+ b_baharal:0 "Baharal"
+ b_samanta:0 "Samanta"
+ b_kadamtara:0 "Kadamtara"
+
+ c_dekshapara:0 "Dekshapara"
+ b_dekshapara:0 "Dekshapara"
+ b_taukati:0 "Taukati"
+
+ d_kajiimpur:0 "Kajiimpur"
+ c_harikhanagar:0 "Harikhanagar"
+ b_harikhanagar:0 "Harikhanagar"
+ b_jigagar:0 "Jigagar"
+ b_tilapara:0 "Tilapara"
+
+ c_chaua:0 "Chaua"
+ b_chaua:0 "Chaua"
+ b_bankhari:0 "Bankhari"
+ b_bahakholl:0 "Bahakholl"
+
+ c_shampur:0 "Shampur"
+ b_shampur:0 "Shampur"
+ b_parakhola:0 "Parakhola"
+ b_baradar:0 "Baradar"
+
+ d_sukhpukhuria:0 "Sukhpukhuria"
+ c_ghorai:0 "Ghorai"
+ b_ghorai:0 "Ghorai"
+ b_burai:0 "Baratala"
+ b_hamchapur:0 "Hamchapur"
+
+ c_gopinagar:0 "Gopinagar"
+ b_gopinagar:0 "Gopinagar"
+ b_khanarasia:0 "Khanarasia"
+ b_mahishkher:0 "Mahishkher"
+ b_nalkola:0 "Nalkola"
+
+ c_sharipur:0 "Sharipur"
+ b_sharipur:0 "Sharipur"
+ b_ayabpur:0 "Ayabpur"
+ b_mohespur:0 "Mohespur"
+
+ k_uttamanuru:0 "Uttamanuru"
+ d_badriol:0 "Badriol"
+ c_mathillo:0 "Mathillo"
+ b_mathillo:0 "Mathillo"
+ b_lalpur:0 "Lalpur"
+ b_gairiwa:0 "Gairiwa"
+ b_phogatpura:0 "Phogatpura"
+
+ c_kharamtar:0 "Kharamtar"
+ b_deurali:0 "Deurali"
+ b_gijet:0 "Gijet"
+
+ c_sisnukharka:0 "Sisnukharka"
+ b_sisnukharka:0 "Sisnukharka"
+ b_maidane:0 "Maidane"
+ b_chunibol:0 "Chunibol"
+
+ d_kuria:0 "Kuria"
+ c_baitar:0 "Baitar"
+ b_baitar:0 "Baitar"
+ b_bajeria:0 "Bajeria"
+ b_laphe:0 "Laphe"
+
+ c_bhaurtol:0 "Bhaurtol"
+ b_bhaurtol:0 "Bhaurtol"
+ b_salana:0 "Salana"
+ b_chela:0 "Chela"
+
+ c_purun:0 "Purun"
+ b_purun:0 "Purun"
+ b_dabucha:0 "Dabucha"
+ b_chandanbar:0 "Chandanbar"
+
+ d_jubing:0 "Jubing"
+ c_banginia:0 "Banginia"
+ b_banginia:0 "Banginia"
+ b_goljunia:0 "Goljunia"
+ b_pakhere:0 "Pakhere"
+
+ c_mavara:0 "Mavara"
+ b_mavara:0 "Mavara"
+ b_kotidanda:0 "Kotidanda"
+ b_majhereti:0 "Majhereti"
+
+ c_lapche:0 "Lapche"
+ b_lapche:0 "Lapche"
+ b_simaradhi:0 "Simaradhi"
+ b_sisapur:0 "Sisapur"
+
+ d_jayanisir:0 "Jayanisir"
+ c_madhupattiya:0 "Madhupattiya"
+ b_madhupattiya:0 "Madhupattiya"
+ b_bhaarka:0 "Bhaarka"
+ b_phulkharka:0 "Phulkharka"
+
+ c_baka:0 "Baka"
+ b_baka:0 "Baka"
+ b_dashami:0 "Dashami"
+ b_chhedin:0 "Chhedin"
+
+ c_dumrabasa:0 "Dumrabasa"
+ b_dumrabasa:0 "Dumrabasa"
+ b_sarkitol:0 "Sarkitol"
+
+ d_bharatikos:0 "Bharatikos"
+ c_champagoas:0 "Champagoas"
+ b_champagoas:0 "Champagoas"
+ b_kadogaos:0 "Kadogaos"
+ b_sambaos:0 "Sambaos"
+ b__dhairenia:0 "Dhairenia"
+
+ c_samargaon:0 "Samargaon"
+ b_samargaon:0 "Samargaon"
+ b_kikhunos:0 "Kikhunos"
+ b_bharphedia:0 "Bharphedia"
+ b_sanos:0 "Sanos"
+ 
+ c_gudkelosa:0 "Gudkelosa"
+ b_gudkelosa:0 "Gudkelosa"
+ b_khakharsos:0 "Khakharsos"
+ b_gorundia:0 "Gorundia"
+ b_itharawa:0 "Itharawa"
+
+ c_ghogsillia:0 "Ghogsillia"
+ b_ghogsillia:0 "Ghogsillia"
+ b_photia:0 "Photia"
+ b_simarbona:0 "Simarbona"
+ b_mantrdanos:0 "Mantrdanos" 
