--- a/localization/english/fodlan_traits_l_english.yml
+++ b/localization/english/fodlan_traits_l_english.yml
@@ -23,3 +23,118 @@
  trait_crest_timotheos:0 "Timotheos Crest"
  trait_crest_maurice:0 "Maurice Crest"
  trait_crest_malik:0 "Malik gift"
+ 
+ trait_crest_minor_seiros:0 "Minor Crest of Seiros"
+ trait_crest_minor_seiros_desc:0 "This character bears the Minor Crest of Seiros"
+ trait_crest_major_seiros:0 "Major Crest of Seiros"
+ trait_crest_major_seiros_desc:0 "This character bears the Major Crest of Seiros"
+
+ trait_crest_minor_flames:0 "Minor Crest of Flames"
+ trait_crest_minor_flames_desc:0 "This character bears the Minor Crest of Flames"
+ trait_crest_major_flames:0 "Major Crest of Flames"
+ trait_crest_major_flames_desc:0 "This character bears the Major Crest of Flames"
+
+ trait_crest_minor_macuil:0 "Minor Crest of Macuil"
+ trait_crest_minor_macuil_desc:0 "This character bears the Minor Crest of Macuil"
+ trait_crest_major_macuil:0 "Major Crest of Macuil"
+ trait_crest_major_macuil_desc:0 This character bears the Major Crest of Macuil"
+
+ trait_crest_minor_indech:0 "Minor Crest of Indech"
+ trait_crest_minor_indech_desc:0 "This character bears the Minor Crest of Indech"
+ trait_crest_major_indech:0 "Major Crest of Indech"
+ trait_crest_major_indech_desc:0 "This character bears the Major Crest of Indech"
+
+ trait_crest_minor_cichol:0 "Minor Crest of Cichol"
+ trait_crest_minor_cichol_desc:0 "This character bears the Minor Crest of Cichol"
+ trait_crest_major_cichol:0 "Major Crest of Cichol"
+ trait_crest_major_cichol_desc:0 "This character bears the Major Crest of Cichol"
+
+ trait_crest_minor_cethleann:0 "Minor Crest of Cethleann"
+ trait_crest_minor_cethleann_desc:0 "This character bears the Minor Crest of Cethleann"
+ trait_crest_major_cethleann:0 "Major Crest of Cethleann"
+ trait_crest_major_cethleann_desc:0 "This character bears the Major Crest of Cethleann"
+
+ trait_crest_minor_riegan:0 "Minor Crest of Riegan"
+ trait_crest_minor_riegan_desc:0 "This character bears the Minor Crest of Riegan"
+ trait_crest_major_riegan:0 "Major Crest of Riegan"
+ trait_crest_major_riegan_desc:0 "This character bears the Major Crest of Riegan"
+
+ trait_crest_minor_lamine:0 "Minor Crest of Lamine"
+ trait_crest_minor_lamine_desc:0 "This character bears the Minor Crest of Lamine"
+ trait_crest_major_lamine:0 "Major Crest of Lamine"
+ trait_crest_major_lamine_desc:0 "This character bears the Major Crest of Lamine"
+
+ trait_crest_minor_goneril:0 "Minor Crest of Goneril"
+ trait_crest_minor_goneril_desc:0 "This character bears the Minor Crest of Goneril"
+ trait_crest_major_goneril:0 "Major Crest of Goneril"
+ trait_crest_major_goneril_desc:0 "This character bears the Major Crest of Goneril"
+
+ trait_crest_minor_gloucester:0 "Minor Crest of Gloucester"
+ trait_crest_minor_gloucester_desc:0 "This character bears the Minor Crest of Gloucester"
+ trait_crest_major_gloucester:0 "Major Crest of Gloucester"
+ trait_crest_major_gloucester_desc:0 "This character bears the Major Crest of Gloucester"
+
+ trait_crest_minor_gautier:0 "Minor Crest of Gautier"
+ trait_crest_minor_gautier_desc:0 "This character bears the Minor Crest of Gautier"
+ trait_crest_major_gautier:0 "Major Crest of Gautier"
+ trait_crest_major_gautier_desc:0 "This character bears the Major Crest of Gautier"
+
+ trait_crest_minor_fraldarius:0 "Minor Crest of Fraldarius"
+ trait_crest_minor_fraldarius_desc:0 "This character bears the Minor Crest of Fraldarius"
+ trait_crest_major_fraldarius:0 "Major Crest of Fraldarius"
+ trait_crest_major_fraldarius_desc:0 "This character bears the Major Crest of Fraldarius"
+
+ trait_crest_minor_dominic:0 "Minor Crest of Dominic"
+ trait_crest_minor_dominic_desc:0 "This character bears the Minor Crest of Dominic"
+ trait_crest_major_dominic:0 "Major Crest of Dominic"
+ trait_crest_major_dominic_desc:0 "This character bears the Major Crest of Dominic"
+
+ trait_crest_minor_daphnel:0 "Minor Crest of Daphnel"
+ trait_crest_minor_daphnel_desc:0 "This character bears the Minor Crest of Daphnel"
+ trait_crest_major_daphnel:0 "Major Crest of Daphnel"
+ trait_crest_major_daphnel_desc:0 "This character bears the Major Crest of Daphnel"
+
+ trait_crest_minor_charon:0 "Minor Crest of Charon"
+ trait_crest_minor_charon_desc:0 "This character bears the Minor Crest of Charon"
+ trait_crest_major_charon:0 "Major Crest of Charon"
+ trait_crest_major_charon_desc:0 "This character bears the Major Crest of Charon"
+
+ trait_crest_minor_blaiddyd:0 "Minor Crest of Blaiddyd"
+ trait_crest_minor_blaiddyd_desc:0 "This character bears the Minor Crest of Blaiddyd"
+ trait_crest_major_blaiddyd:0 "Major Crest of Blaiddyd"
+ trait_crest_major_blaiddyd_desc:0 "This character bears the Major Crest of Blaiddyd"
+
+ trait_crest_minor_aubin:0 "Minor Crest of Aubin"
+ trait_crest_minor_aubin_desc:0 "This character bears the Minor Crest of Aubin"
+ trait_crest_major_aubin:0 "Major Crest of Aubin"
+ trait_crest_major_aubin_desc:0 "This character bears the Major Crest of Aubin"
+
+ trait_crest_minor_chevalier:0 "Minor Crest of Chevalier"
+ trait_crest_minor_chevalier_desc:0 "This character bears the Minor Crest of Chevalier"
+ trait_crest_major_chevalier:0 "Major Crest of Chevalier"
+ trait_crest_major_chevalier_desc:0 "This character bears the Major Crest of Chevalier"
+
+ trait_crest_minor_ernest:0 "Minor Crest of Ernest"
+ trait_crest_minor_ernest_desc:0 "This character bears the Minor Crest of Ernest"
+ trait_crest_major_ernest:0 "Major Crest of Ernest"
+ trait_crest_major_ernest_desc:0 "This character bears the Major Crest of Ernest"
+
+ trait_crest_minor_noa:0 "Minor Crest of Noa"
+ trait_crest_minor_noa_desc:0 "This character bears the Minor Crest of Noa"
+ trait_crest_major_noa:0 "Major Crest of Noa"
+ trait_crest_major_noa_desc:0 "This character bears the Major Crest of Noa"
+
+ trait_crest_minor_timotheos:0 "Minor Crest of Timotheos"
+ trait_crest_minor_timotheos_desc:0 "This character bears the Minor Crest of Timotheos"
+ trait_crest_major_timotheos:0 "Major Crest of Timotheos"
+ trait_crest_major_timotheos_desc:0 "This character bears the Major Crest of Timotheos"
+ 
+ trait_crest_minor_maurice:0 "Minor Crest of The Beast"
+ trait_crest_minor_maurice_desc:0 "This character bears the Minor Crest of the Beast"
+ trait_crest_major_maurice:0 "Major Crest of The Beast"
+ trait_crest_major_maurice_desc:0 "This character bears the Major Crest of the Beast"
+
+ trait_crest_minor_malik:0 "Minor Gift of Malik"
+ trait_crest_minor_malik_desc:0 "This character bears the Minor Gift of Malik"
+ trait_crest_major_malik:0 "Major Gift of Malik"
+ trait_crest_major_malik_desc:0 "This character bears the Major Gift of Malik"
